# mid

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
src/mid/: config.py  main.py
tests/: test_specificity.py
