[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mid"
version = "0.1.0"
description = "An opinionated Python CLI framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
mid = "mid.main:main"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
